--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "name": "sveltekit-and-the-content-layer",
   "private": true,
   "scripts": {
     "build": "slidev build",
-    "dev": "slidev --open",
+    "dev": "slidev",
     "export": "slidev export"
   },
   "dependencies": {
     "@slidev/cli": "^0.27.16",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*"
-  },
-  "name": "sveltekit-and-the-content-layer"
+  }
 }
