chore: :wrench: update spellings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,11 @@
   "git.postCommitCommand": "sync",
   "cSpell.words": [
     "Fira",
+    "Postma",
+    "slidev",
+    "spences",
     "URQL",
+    "vclick",
     "VITE"
   ],
   "editor.formatOnSave": false
