feat: :sparkles: mdi icon set

--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "@slidev/theme-seriph": "*"
   },
   "devDependencies": {
-    "@iconify-json/icon-park-outline": "^1.0.1"
+    "@iconify-json/mdi": "^1.0.10"
   }
 }
