--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@iconify-json/mdi": "^1.0.10",
     "@slidev/cli": "^0.27.17",
-    "@slidev/theme-default": "*",
-    "@slidev/theme-seriph": "*"
+    "@slidev/theme-default": "*"
   }
 }
