chore: :wrench: add icons package back in

--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "dependencies": {
     "@slidev/cli": "^0.27.17",
     "@slidev/theme-default": "*"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.0.10"
   }
 }
